[project]
name = "alerta-climatica"
version = "1.0.0"
description = "Analizador de condiciones climáticas severas."
authors = [
    {name = "LinuxmanR4",email = "inguanzo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.poetry]
packages = [{include = "alerta_climatica", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
